tests/functional/repl_characterization/data/repl_overlays_error.test
`repl-overlays` that fail to evaluate should error.
@args --repl-overlays
@args ${PWD}/extra_data/repl-overlay-fail.nix
@should-start false
  error:
         … while evaluating variable final
           at «string»:6:1:
              5| in
              6| final
               | ^
              7|

         … while calling the 'foldl'' builtin
           at «string»:4:11:
              3| let
              4|   final = builtins.foldl' (prev: function: prev // (function info final prev)) initial functions;
               |           ^
              5| in

         (stack trace truncated; use '--show-trace' to show the full trace)

         error: evaluation aborted with the following error message: 'uh oh!'
